User microservice updated

--- a/UserCore/pom.xml
+++ b/UserCore/pom.xml
@@ -7,11 +7,11 @@
     <version>2.2.7.RELEASE</version>
     <relativePath/>
   </parent>
-  <groupId>com.example</groupId>
-  <artifactId>demo</artifactId>
+  <groupId>de.hska.iwi.vslab.user</groupId>
+  <artifactId>UserCore</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>demo</name>
-  <description>Demo project for Spring Boot</description>
+  <name>UserCore</name>
+  <description>UserCore Microservice</description>
   <properties>
     <java.version>1.8</java.version>
     <azure.version>2.2.0</azure.version>
