--- a/UserCore/src/main/resources/application.yml
+++ b/UserCore/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8080
+    port: 8069
 spring:
     application:
         name: user-service
@@ -7,7 +7,7 @@ spring:
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+            defaultZone: http://Eureka:8761/eureka/
         instance:
             preferIpAdress: true
             leaseRenewalIntervallInSeconds: 5
