Solved difference in slides and reality

--- a/CatalogueComposite/src/main/resources/application.yml
+++ b/CatalogueComposite/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
     application:
         name: catalogue-service
-
+management.endpoints.web.exposure.include: hystrix.stream
 eureka:
     client:
         serviceUrl:
