Prepared Role Service for Hystrix

--- a/RoleCore/pom.xml
+++ b/RoleCore/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.2.9.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>de.hska.iwi.vslab</groupId>
+	<groupId>de.hska.iwi.vislab</groupId>
 	<artifactId>rolecore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rolecore</name>
@@ -59,16 +59,20 @@
 		</dependency>
 
     <!-- OAuth2 -->
-		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.2.1.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security.oauth.boot</groupId>
-			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
-			<version>2.2.1.RELEASE</version>
-		</dependency>
+    <dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-security</artifactId>
+	  </dependency>
+    <dependency>
+      <groupId>org.springframework.security.oauth</groupId>
+      <artifactId>spring-security-oauth2</artifactId>
+      <version>2.2.1.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security.oauth.boot</groupId>
+      <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+      <version>2.2.1.RELEASE</version>
+    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
