--- a/zuul_server/src/main/resources/application.yml
+++ b/zuul_server/src/main/resources/application.yml
@@ -9,7 +9,8 @@ server:
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://Eureka:8761/eureka/
+            #defaultZone: http://Eureka:8761/eureka/
+            defaultZone: http://localhost:8761/eureka/
         instance:
             preferIpAdress: true
             leaseRenewalIntervallInSeconds: 5
